<resources>
    <string name="app_name">CrowClub</string>

    <!-- refreshlayout 底部view的属性 -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loadinfo_loadmore">加载更多</string>
    <string name="loadinfo_loadmoreing">加载中</string>
    <string name="loadinfo_loadmore_failed">加载失败，点此重试</string>

    <!-- RefreshRecycler 中的header 和 footer -->
    <string name="refresh_header_text">The Header</string>
    <string name="refresh_footer_text">The Footer</string>
    <string name="refresh_footer_loading">正在加载中…</string>
    <string name="refresh_footer_network_error">点击重新加载</string>
    <string name="refresh_footer_end">已经到底了</string>

    <!--*************************************************************-->
    <!-- Activity 或 Fragment 的属性值 -->
    <!--*************************************************************-->
    <!-- 我讲的故事 -->
    <string name="user_story">我讲的故事</string>
    <string name="myStory">我的故事</string>
    <string name="mySeries">我的连载</string>
    <string name="story_sort_time">时间正叙</string>
    <string name="story_sort_time_reverse">时间倒叙</string>
    <string name="story_sort_single">单篇故事</string>
    <string name="story_sort_serise">连载故事</string>
    <!-- 用户消息 -->
    <string name="user_message">消息</string>
    <!-- 用户连载-->
    <string name="user_series">连载</string>
    <string name="list_drag">list 展示拖拽</string>
    <string name="grid_drag">grid 展示拖拽</string>
    <!-- 明星签名-->
    <string name="star">明星签名</string>
    <!-- RefreshRecycler-->
    <string name="refreshRecycler">refreshRecycler</string>
    <!-- 连载页面-->
    <string name="album">连载</string>
    <!-- 连载详情页面-->
    <string name="album_detail">连载详情</string>
    <!-- 碎片handler页面-->
    <string name="fragment_handler">某块handler</string>
    <string name="fragment_add_pic">添加图片</string>
    <string name="fragment_minus_pic">删减图片</string>
    <string name="fragment_add_data">增加数据</string>
    <string name="fragment_minus_data">删减数据</string>
    <string name="fragment_pre_page">前一页</string>
    <string name="fragment_next_page">后一页</string>

    <!-- webView -->
    <string name="webview">WebView</string>
    <!-- TestActivity的页面 -->
    <string name="test_opt1">测试一</string>
    <string name="test_opt2">测试二</string>
    <string name="test_opt3">测试三</string>
    <string name="test_opt4">测试四</string>
    <string name="click_showMore">点击查看全部</string>
    <!-- MapJsonActivity 的页面 -->
    <string name="Json_mapJson">MapJson</string>
    <string name="Json_toJson">toJson</string>
    <string name="Json_fromJson">fromJson</string>
    <!-- 用户页面 -->
    <string name="User">用户</string>
    <!-- 反馈页面 -->
    <string name="Feedback_QA">我的反馈</string>
    <string name="Feedback_unRead_msg_Count">未读消息数</string>
    <string name="Feedback_activity">反馈页面</string>
    <!-- Load页面 -->
    <string name="Load">加载</string>
    <!-- 数据库页面 -->
    <string name="DB">数据库</string>
    <string name="createDB">创建数据库</string>
    <string name="getReadDB">可读数据库</string>
    <string name="getWriteDB">可写数据库</string>
    <string name="updateDB">更新数据库</string>
    <string name="updatedGetDB">更新数据库之后获取数据库</string>
    <string name="testMethodDB">测试数据库中的各个方法</string>
</resources>
