<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sina.crowclub.MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_user_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_story"/>

    <Button
        android:id="@+id/btn_user_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_user_story"
        android:layout_marginTop="10dp"
        android:text="@string/user_message"/>

    <Button
        android:id="@+id/btn_user_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_user_message"
        android:layout_marginTop="10dp"
        android:text="@string/user_series"/>

    <Button
        android:id="@+id/btn_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_user_series"
        android:layout_marginTop="10dp"
        android:text="@string/star"/>

    <Button
        android:id="@+id/btn_refresh_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_star"
        android:layout_marginTop="10dp"
        android:text="@string/refreshRecycler"/>

    <Button
        android:id="@+id/btn_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_refresh_recycler"
        android:layout_marginTop="10dp"
        android:text="@string/album"/>

    <Button
        android:id="@+id/btn_album_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_album"
        android:layout_marginTop="10dp"
        android:text="@string/album_detail"/>

    <Button
        android:id="@+id/btn_fragment_handler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_album_detail"
        android:layout_marginTop="20dp"
        android:text="@string/fragment_handler"/>

    <Button
        android:id="@+id/btn_webview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_fragment_handler"
        android:layout_marginTop="10dp"
        android:text="@string/webview"/>
    <Button
        android:id="@+id/btn_map_json"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_webview"
        android:layout_marginTop="10dp"
        android:text="@string/Json_mapJson"/>

    <Button
        android:id="@+id/btn_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_map_json"
        android:layout_marginTop="10dp"
        android:text="@string/User"/>

    <Button
        android:id="@+id/btn_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_user"
        android:layout_marginTop="10dp"
        android:text="@string/Load"/>

</LinearLayout>
</ScrollView>
