<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_title"
        layout="@layout/view_title"/>

    <Button
        android:id="@+id/btn_QA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Feedback_QA"
        android:textSize="16sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_unReadMsgCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Feedback_unRead_msg_Count"
        android:textSize="16sp"
        android:gravity="center" />

    <Button
        android:id="@+id/btn_openFeedbackActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Feedback_activity"
        android:textSize="16sp"
        android:gravity="center" />
</LinearLayout>
