<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_test1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_opt1"
        android:gravity="center"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_test2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_opt2"
        android:gravity="center"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_test3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_opt3"
        android:gravity="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_test4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_opt4"
        android:gravity="center"
        android:textSize="16sp" />


    <com.sina.crowclub.view.widget.ShowMoreView
        android:id="@+id/view_showMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:defaultLines="4"
        app:showType="1"/>

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.sina.crowclub.view.widget.RoundEditImageView
        android:id="@+id/rimg_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/icon_nice_girl_eat"/>
</LinearLayout>
